kitsune/sumo/static/less/mobile/main.less
/* ... */
.header-overlay {
  background: rgba(40, 40, 40, 0.98) url('../../img/grain.png') 0 0 repeat;
  border-bottom: 1px solid #000;
  height: 50px;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 100;

  h2 {
    color: #fff;
    font-size: 24px;
    font-weight: normal;
    line-height: 50px;
    margin: 0 16px;
  }

  .done-button {
    color: #fff;
    cursor: pointer;
    float: right;
    height: 50px;
    line-height: 50px;
    padding: 0 12px;
  }
}

.footer-overlay {
  background: rgba(40, 40, 40, 0.98) url('../../img/grain.png') 0 0 repeat;
  bottom: 0;
  height: 50px;
  position: fixed;
  width: 100%;
  z-index: 100;
}

.overlay {
  background: rgba(40, 40, 40, 0.98) url('../../img/grain.png') 0 0 repeat;
  bottom: 0;
  left: 0;
  position: fixed;
  right: 0;
  top: 0;
  z-index: 100;

  > header {
    border-bottom: 1px solid rgba(255, 255, 255, 0.25);
    .box-shadow(0 0 10px 0 rgba(0, 0, 0, 0.5));
    color: #fff;
    cursor: pointer;
    height: 50px;
    left: 0;
    line-height: 50px;
    padding: 0 30px;
    position: absolute;
    right: 0;
    top: 0;
  }

  .select-list {
    font-size: 24px;
    list-style: none;
    margin: 0 24px;
    padding: 0;

    > li {
      > a,
      > a:visited,
      > a:hover {
        border-bottom: 1px solid #000;
        border-top: 1px solid rgba(255, 255, 255, 0.25);
        color: #fff;
        display: block;
        padding: 16px 28px 16px 6px;
        position: relative;
        text-decoration: none;
      }

      &.selected {
        > a,
        > a:visited,
        > a:hover {
          color: #00a5c5;

          &:before {
            content: '\2713';
            position: absolute;
            right: 0;
          }
        }
      }

      &:first-of-type {
        > a {
          border-top: 0;
        }
      }

      &:last-of-type {
        > a {
          border-bottom: 0;
        }
      }
    }
  }

  .wrapper {
    bottom: 0;
    color: #fff;
    font-size: 24px;
    left: 0;
    overflow: auto;
    position: absolute;
    right: 0;
    top: 51px;

    &.padded {
      padding: 0 24px;
    }
  }
}

.paginator {
  list-style: none;
  margin: 0;
  padding: 10px 16px;

  li {
    .box-sizing(border-box);
    float: left;
    width: 27.5%;

    &.disabled {
      opacity: 0.5;
    }

    &.page {
      padding: 0 16px;
      width: 45%;

      .select-box {
        float: none;
        margin: 0;
      }
    }

    .btn {
      margin-top: 4px;
    }
  }
}

.progress-bar {
  background: rgba(0, 0, 0, 0.1) url('../img/grain.png');
  border: 1px solid rgba(0, 0, 0, 0.03);
  .border-radius(12px);
  color: #fff;
  font-size: 20px;
  font-weight: bold;
  height: 24px;
  line-height: 24px;
  position: relative;
  text-align: right;
  z-index: 1;

  &:after {
    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
    .border-radius(13px);
    bottom: -2px;
    content: '';
    left: 0;
    position: absolute;
    right: 0;
    top: 0;
    z-index: -1;
  }

  &:before {
    border: 2px solid rgba(0, 0, 0, 0.01);
    .border-radius(12px);
    bottom: 0;
    content: '';
    left: 0;
    position: absolute;
    right: 0;
    top: 0;
    z-index: -1;
  }

  > div {
    .gradient(#ff9500, #ff9500, #ed7000);
    .border-radius(12px);
    height: 24px;
    position: relative;
    z-index: 5;

    > span {
      margin-right: 10px;
    }
  }
}

.pulldown-menu {
  background: @mobileNavBackground url('../../img/grain.png');
  .box-shadow(0 0 5px rgba(0, 0, 0, 0.6));
  left: 0;
  margin-top: 51px;
  position: absolute;
  right: 0;
  z-index: 8;

  .pulldown-panel {
    max-height: 0;
    overflow: hidden;
    .transition-property(max-height);
    .transition-duration(0.5s);

    > section {
      border-bottom: 1px solid #2f393b;
      border-top: 1px solid #484d54;
      padding: 6px 16px;

      &:first-of-type {
        border-top: 0;
      }

      &:last-of-type {
        border-bottom: 0;
      }
    }
  }

  &.open {
    .pulldown-panel {
      max-height: 800px;
      .transition-duration(1.55s)
    }
  }

  .pulldown-handle {
    background: url('../../img/mobile/handle.png') 0 0 no-repeat;
    bottom: -19px;
    cursor: pointer;
    height: 19px;
    left: 50%;
    margin-left: -42px;
    position: absolute;
    width: 85px;
  }
}

.return-button {
  background-position: -48px -286px;
  border-right: 1px solid @mobileHeaderBorder;
  .box-shadow(0 0 0 1px rgba(255, 255, 255, 0.3));
  float: left;
  height: 24px;
  margin: 0 8px 0 0;
  padding: 13px 4px 13px 2px;
  text-indent: -9999px;
  width: 24px;
}

.scrollable {
  -webkit-overflow-scrolling: touch;
}

.select-box {
  background: #e7e7e7;
  border: 1px solid rgba(0, 0, 0, 0.35);
  .border-radius(2px);
  color: #333;
  cursor: pointer;
  float: left;
  height: 38px;
  line-height: 38px;
  overflow: hidden;
  padding: 0 14px;
  position: relative;
  text-decoration: none;

  &:after {
    border-color: transparent #333 transparent transparent;
    border-style: solid;
    border-width: 10px 10px 0 0;
    bottom: 3px;
    content: '';
    position: absolute;
    right: 3px;
  }
}

.smart-width {
  max-width: 100%;
}

.swipeable {
  overflow: auto;
  -webkit-overflow-scrolling: touch;
}
/* ... */

